@@ -1,3 +1,8 @@
+Wed Jul 30 05:48:46 GMT 2014  Olly Betts <olly@survex.com>
+
+	* weight/bb2weight.cc: Fix comment typo, and capitalise "Stirling" in
+	  comments.
+
 Wed Jul 30 05:47:31 GMT 2014  Olly Betts <olly@survex.com>
 
 	* weight/bb2weight.cc: Whitespace cleanup.
